--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "jest": "^24.8.0",
     "parcel": "^1.12.3",
     "prettier": "^1.18.2"
+  },
+  "repository": {
+    "url": "https://github.com/vitkarpov/tiny-bemjson"
   }
 }
